[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/RigidBody2D.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 112.0

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[node name="RigidBody2D" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="MouseDetectorLarge" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="MouseDetectorLarge"]
visible = false
shape = SubResource( 1 )

[node name="MouseDetectorSmall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetectorSmall"]
visible = false
shape = SubResource( 2 )

[connection signal="mouse_entered" from="MouseDetectorLarge" to="." method="_on_MouseDetectorLarge_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetectorLarge" to="." method="_on_MouseDetectorLarge_mouse_exited"]
[connection signal="mouse_entered" from="MouseDetectorSmall" to="." method="_on_MouseDetectorSmall_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetectorSmall" to="." method="_on_MouseDetectorSmall_mouse_exited"]
